# src/main/java/com/repomgr/repomanager/rest/RestUserController.java
@@ -13,7 +13,7 @@ import org.springframework.web.bind.annotation.*;
 
 @CrossOrigin(origins = "*", maxAge = 3600)
 @RestController
-@RequestMapping("/users")
+@RequestMapping("/v1/users")
 public class RestUserController {
     private final UserService userService;
 
