# src/main/resources/static/swagger.yaml
@@ -1,8 +1,18 @@
 swagger: "2.0"
 info:
-  description: "Description API"
+  description: "
+    The repository manager can be used to manage artifacts and to get an overview of existing artifacts from the build-pipeline.
+
+    To use this API a token is required. This token can be generated by the *authentication/generate-token* API.
+
+
+    Users can be managed with the */users* API. For this API is a token with ADMIN privileges required.
+
+
+    To create new entries of new artifact versions, the */repositories* API is provided.
+  "
   version: "1.0"
-  title: "RepoMgr API"
+  title: "Repository Manager API"
   termsOfService: "http://swagger.io/terms/"
   contact:
     email: "joerg.flade@l-und-f.de"
@@ -17,7 +27,7 @@ tags:
   - name: "authentication"
     description: "Access to the RepoMgr"
   - name: "repository"
-    description: "Operative API"
+    description: "Operative API to handle the artifacts"
 schemes:
   - "https"
   - "http"
@@ -79,10 +89,6 @@ paths:
           description: "successful authenticated and token generated"
           schema:
             $ref: '#/definitions/Token'
-        401:
-          description: "Unauthorized"
-          schema:
-            $ref: '#/definitions/Error'
 
   /users:
     post:
@@ -155,7 +161,7 @@ paths:
             $ref: '#/definitions/Error'
       security:
         - Bearer: []
-  /{userId}:
+  /users/{userId}:
     delete:
       tags:
         - "user"
@@ -190,6 +196,7 @@ securityDefinitions:
 
 definitions:
   VersionInformation:
+    description: "Contains informations about the artifacts."
     required:
       - projectName
       - branch
@@ -241,17 +248,23 @@ definitions:
         example: "2019-02-02T11:34:35.470+0000"
 
   UserResponse:
+    description: "Repsonse object for user requests, that contains the userId and the valid-state."
     required:
       - valid
       - userId
     type: object
     properties:
       valid:
+        description: "If true, the request was successful."
         type: boolean
+        example: true
       userId:
+        description: "User ID (UUID) to handle further requests against the user API."
         type: string
         maxLength: 100
+        example: "fa40f586-1588-4193-9ae0-d2ab2b316031"
   User:
+    description: "Represents an user with credentials, role and project"
     allOf:
       - $ref: '#/definitions/Credentials'
       - type: object
@@ -261,14 +274,19 @@ definitions:
           - role
         properties:
           projectName:
+            description: "Describes the project to which the user is assigned"
             type: "string"
             maxLength: 100
+            example: "MyProject"
           role:
+            description: "Role of the user. Use ADMIN for working with the /user API and USER to work with the /repository API."
             type: "string"
             enum:
               - ADMIN
               - USER
+            example: USER
   Credentials:
+    description: "Credentials object for username and password informations."
     allOf:
       - $ref: '#/definitions/Password'
       - type: object
@@ -280,7 +298,9 @@ definitions:
             type: "string"
             minLength: 1
             maxLength: 100
+            example: "user001"
   Password:
+    description: "Describes a password"
     required:
       - password
     type: object
@@ -288,31 +308,42 @@ definitions:
       password:
         type: "string"
         maxLength: 255
+        example: "my-perfect-password"
   Token:
+    description: "Represents the token as a result object to the client."
     required:
       - token
     type: object
     properties:
       token:
+        description: "Represents the JWT token. This token must be set tot all requests against secured endpoints as a part of a Bearer token at the Authorization header."
         type: "string"
         maxLength: 255
         example: "eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJhZG1pbiIsInNjb3BlcyI6W3siYXV0aG9yaXR5IjoiUk9MRV9BRE1JTiJ9XSwiaXNzIjoiUmVwb01hbmFnZXIiLCJpYXQiOjE1NDkwNjE2MTgsImV4cCI6MTU0OTA2NTIyOX0.n0CK66KFTA81XDgGF89HzIDEfuvdwUOXm1put75QiZo"
   Message:
+    description: "Message object for returning defined error messages"
     type: object
     properties:
       category:
+        description: "represents the priorisation of the message"
         type: string
         enum:
           - ERROR
           - WARN
           - INFO
+        example: "INFO"
       message:
+        description: "Message text for the client"
         type: string
+        example: "Please read the API"
   Response:
+    description: "Response container object with status."
     type: object
     properties:
       status:
+        description: "If true, then the request was successful."
         type: boolean
+        example: true
       _message:
         $ref: '#/definitions/Message'
   Error:
